--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http": "0.0.0",
 	"cors": "^2.8.4",
     "morgan": "^1.9.0",
-    "superlogin": "^0.6.1"
+    "superlogin": "^0.6.1",
+     "nodemailer":"^2.3.0"
   }
 }
